--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "next": "15.1.6",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "react-scroll": "^1.9.2"
+    "react-scroll": "^1.9.2",
+    "react-typed": "^2.0.12",
+    "typed.js": "^2.1.0"
   },
   "devDependencies": {
     "@types/node": "^20",
