--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "next": "15.1.6",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-router-dom": "^7.2.0",
     "react-scroll": "^1.9.2",
     "react-typed": "^2.0.12",
     "typed.js": "^2.1.0"
