--- a/tsconfig.json
+++ b/tsconfig.json
@@ -17,6 +17,6 @@
       "@/*": ["./src/*"]
     }
   },
-  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", "src/data/homepage.js"],
+  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", "src/data/homepage.js", "src/pages/pavel-projects/[id].tsx"],
   "exclude": ["node_modules"]
 }
