--- a/package.json
+++ b/package.json
@@ -16,13 +16,15 @@
     "react-router-dom": "^7.2.0",
     "react-scroll": "^1.9.2",
     "react-typed": "^2.0.12",
+    "swiper": "^11.2.4",
     "typed.js": "^2.1.0"
   },
   "devDependencies": {
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
-    "postcss": "^8",
+    "autoprefixer": "^10.4.20",
+    "postcss": "^8.5.3",
     "tailwindcss": "^3.4.1",
     "typescript": "^5"
   }
