--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "firebase": "^11.4.0",
     "framer-motion": "^12.4.7",
     "lucide-react": "^0.474.0",
     "next": "15.1.6",
@@ -16,6 +17,7 @@
     "react-dom": "^19.0.0",
     "react-router-dom": "^7.2.0",
     "react-scroll": "^1.9.2",
+    "react-toastify": "^11.0.5",
     "react-typed": "^2.0.12",
     "swiper": "^11.2.4",
     "typed.js": "^2.1.0"
