Add serene project in project section

--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@tailwindcss/line-clamp": "^0.4.4",
     "dotenv": "^16.4.7",
     "firebase": "^11.4.0",
     "framer-motion": "^12.4.7",
