--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@sanity/client": "^7.8.2",
+    "@sanity/image-url": "^1.1.0",
     "@tailwindcss/line-clamp": "^0.4.4",
     "dotenv": "^16.4.7",
     "firebase": "^11.4.0",
